force-app/main/default/objects/Person__c/fields/Child_inheritance_percent__c.field-meta.xml
<CustomField>
    <fullName>Child_inheritance_percent__c</fullName>
    <label>Child inheritance percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>