force-app/main/default/objects/Person__c/fields/CPR__c.field-meta.xml
<CustomField>
    <fullName>CPR__c</fullName>
    <label>CPR</label>
    <length>50</length>
    <type>Text</type>
</CustomField>