force-app/main/default/objects/Person__c/fields/CPR_Number_Censored__c.field-meta.xml
<CustomField>
    <fullName>CPR_Number_Censored__c</fullName>
    <formula>IF(OR( LEN(CPR__c)=10,LEN(CPR__c)=11),IF(NOT(ISBLANK(CPR__c)), LEFT(CPR__c , 6)+&quot;-XXXX&quot;, &quot; &quot;) ,CPR__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CPR Number Censored</label>
    <type>Text</type>
</CustomField>