force-app/main/default/objects/Person__c/fields/Custody__c.field-meta.xml
<CustomField>
    <fullName>Custody__c</fullName>
    <label>Custody</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Common</fullName>
                <label>Fælles</label>
            </value>
            <value>
                <fullName>Divided</fullName>
                <label>Delt</label>
            </value>
            <value>
                <fullName>full</fullName>
                <label>Fuld</label>
            </value>
            <value>
                <fullName>Missing</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>