force-app/main/default/objects/Person__c/fields/First_Is_Blacksheep__c.field-meta.xml
<CustomField>
    <fullName>First_Is_Blacksheep__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First_Is Blacksheep</label>
    <type>Checkbox</type>
</CustomField>