force-app/main/default/objects/Person__c/fields/Guardian_Justification__c.field-meta.xml
<CustomField>
    <fullName>Guardian_Justification__c</fullName>
    <label>Guardian Justification</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>