force-app/main/default/objects/Person__c/fields/Guardian_monthly_amount__c.field-meta.xml
<CustomField>
    <fullName>Guardian_monthly_amount__c</fullName>
    <label>Guardian monthly amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>