force-app/main/default/objects/Person__c/fields/Guardian_one_time_fee__c.field-meta.xml
<CustomField>
    <fullName>Guardian_one_time_fee__c</fullName>
    <label>Guardian one time fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>