force-app/main/default/objects/Person__c/fields/Guardian_type__c.field-meta.xml
<CustomField>
    <fullName>Guardian_type__c</fullName>
    <label>Guardian type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primær</fullName>
            </value>
            <value>
                <fullName>Sekundær</fullName>
            </value>
            <value>
                <fullName>Missing</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Against</fullName>
                <isActive>false</isActive>
                <label>Against</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>