force-app/main/default/objects/Person__c/fields/Heir_inheritance_percent__c.field-meta.xml
<CustomField>
    <fullName>Heir_inheritance_percent__c</fullName>
    <label>Heir inheritance percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>