force-app/main/default/objects/Person__c/fields/Is_Blacksheep__c.field-meta.xml
<CustomField>
    <fullName>Is_Blacksheep__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Blacksheep</label>
    <type>Checkbox</type>
</CustomField>