force-app/main/default/objects/Person__c/fields/Is_Primary_P__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary_P__c</fullName>
    <label>Is Primary</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Missing</fullName>
                <label>N/A</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>