force-app/main/default/objects/Person__c/fields/Parents__c.field-meta.xml
<CustomField>
    <fullName>Parents__c</fullName>
    <label>Parents</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Spouse1</fullName>
            </value>
            <value>
                <fullName>Spouse2</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>Missing</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>