force-app/main/default/objects/Person__c/fields/Procurator_Justification__c.field-meta.xml
<CustomField>
    <fullName>Procurator_Justification__c</fullName>
    <label>Procurator Justification</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>