force-app/main/default/objects/Person__c/fields/Second_Is_Blacksheep__c.field-meta.xml
<CustomField>
    <fullName>Second_Is_Blacksheep__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Second_Is_Blacksheep</label>
    <type>Checkbox</type>
</CustomField>