force-app/main/default/objects/Person__c/fields/Second_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Second_Percentage__c</fullName>
    <label>Second_Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>