force-app/main/default/objects/Person__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Spouse 1</fullName>
            </value>
            <value>
                <fullName>Spouse 2</fullName>
            </value>
            <value>
                <fullName>First_Heir (legetar)</fullName>
            </value>
            <value>
                <fullName>Guardian 1</fullName>
            </value>
            <value>
                <fullName>Guardian 2</fullName>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
            <value>
                <fullName>Procurator</fullName>
            </value>
            <value>
                <fullName>Second_Heir (legatar)</fullName>
            </value>
            <value>
                <fullName>Unwanted Guardian</fullName>
            </value>
            <value>
                <fullName>Heir (legetar)</fullName>
                <isActive>false</isActive>
                <label>Heir (legetar)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>